# MLOps_TA

./: .env.enc  .gitignore  .gitignore.orig  Makefile  README.md  cloudbuild.yaml  cloudbuild.yaml.orig  data.dvc  models.dvc  pyproject.toml  reports.dvc  requirements.txt  requirements_dev.txt  requirements_docker.txt
.dvc/: config
.github/: docker_trainer.yml
.github/workflows/: codecheck.yml  docker_trainer.yml  tests.yml  tests_gcp.yml
config_files/: config_train.yaml
deployment/: main.py  reqests_script.py
deployment_ex/cloud_deployment/: deploy_class.py
deployment_ex/cloud_deployment_2/: app.dockerfile
deployment_ex/deployment/: database.txt
deployment_ex/deployment_2/: jit_comparison.py
deployment_ex/deployment_ml/: model.dockerfile
deployment_ml/: requirements.txt
dockerfiles/: predict.dockerfile  trainer.dockerfile  trainer_ci.dockerfile  trainer_gcp.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gcp/: create_vm  dvc_bucket.txt  encrypt_key
lightning_logs/version_0/: events.out.tfevents.1704395968.mx.29194.0
lightning_logs/version_1/: events.out.tfevents.1704398165.mx.30723.0
lightning_logs/version_2/: events.out.tfevents.1704398228.mx.30823.0
lightning_logs/version_3/: events.out.tfevents.1704398283.mx.30913.0
lightning_logs/version_4/: events.out.tfevents.1704398542.mx.31190.0
mnist/: __init__.py  logging_ex.py  predict_model.py  train_model.py  train_modelL.py
mnist/conf/: config.yaml
mnist/data/: make_dataset.py  (+1 more)
monitoring/: iris_inference.py
scalable/: lfw_dataset.py
tests/: test_data.py  test_model.py
(+15 files in other folders)
