[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mnist"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
indent-width = 4

select = ["I"]

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
